--- a/_layouts/post_header.html
+++ b/_layouts/post_header.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/jb-svbtle/post.html %}
+{% include themes/svbtle/post_header.html %}
