--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -13,10 +13,18 @@
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/prettify.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/base.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/fixes.css">
+    <style type="text/css">
+	.logo, .logo a, ::selection, blockquote {
+		background-color: #{{ site.color }} !important;
+	}
+	.logo a {
+		background-image: url( '{{ ASSET_PATH }}/images/icons/{{ site.icon }}.png' );
+	}
+    </style>
+
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
 
     {% include JB/analytics %}
@@ -26,8 +34,8 @@
 <body class="home blog">
 
     <header id="sidebar">
-        <figure style="background-color: #{{ site.color }};" class="logo medium">
-            <a style="background-color: #{{ site.color }}; background-image: url( '{{ ASSET_PATH }}/images/icons/{{ site.icon }}.png' );" href="{{ BASE_PATH }}/">{{ site.title }}</a>
+        <figure class="logo medium">
+            <a href="{{ BASE_PATH }}/">{{ site.title }}</a>
         </figure>
         <h1><a href="{{ BASE_PATH }}/">{{ site.author.name }}</a></h1>
 
