- Started cleaning up base.css and fixes.css - 404 page modified to remove date/time header - page/post modified to remove redundent div

--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -18,6 +18,7 @@
 			.logo, .logo a, ::selection, blockquote {
 				background-color: #{{ site.color }} !important;
 			}
+			::-moz-selection {background-color: #{{ site.color }} !important; }
 			.logo a {
 				background-image: url( '{{ ASSET_PATH }}/images/icons/{{ site.icon }}.png' );
 			}
