--- a/_includes/themes/jb-svbtle/post.html
+++ b/_includes/themes/jb-svbtle/post.html
@@ -6,7 +6,7 @@
 		<h2 class="entry-title">
 			<a href="{{ page.url }}" class="no-link" title="Permalink to {{ page.title }}" rel="bookmark">{{ page.title }}</a>
 		</h2>
-	<div class="entry-content">{{ content }}</div>
+		{{ content }}
 	{% include JB/comments %}
 	</article>
 </section>
