--- a/_includes/themes/jb-svbtle/page.html
+++ b/_includes/themes/jb-svbtle/page.html
@@ -3,6 +3,6 @@
 		<h2 class="entry-title">
 			<a href="{{ page.url }}" class="no-link" title="Permalink to {{ page.title }}" rel="bookmark">{{ page.title }}</a>
 		</h2>
-		<div class="entry-content">{{ content }}</div>
+		{{ content }}
 	</article>
 </section>
