--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -39,14 +39,7 @@
 			<h1><a href="{{ BASE_PATH }}/">{{ site.author.name }}</a></h1>
 			<ul id="user_nav">
 				<div class="menu">
-					<ul>
-						<li class="page_item page-item-2"><a href="{{ BASE_PATH }}/pages/about">About</a></li>
-						<li class="page_item page-item-2"><a href="{{ BASE_PATH }}/pages/past_work">Past Work</a></li>
-						<li class="page_item page-item-2"><a href="{{ BASE_PATH }}/pages/archive">Archive</a></li>
-						<li class="page_item page-item-2"><a href="mailto:{{ site.author.email }}" target="_blank">Contact Me</a></li>
-					</ul>
-				</div>
-			</ul>
+					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}</ul>
 		</header>
 		<section id="river" role="main">{{ content }}</section>
 		<script src="{{ ASSET_PATH }}/js/prettify.js"></script>
