--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -39,7 +39,9 @@
 			<h1><a href="{{ BASE_PATH }}/">{{ site.author.name }}</a></h1>
 			<ul id="user_nav">
 				<div class="menu">
-					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}</ul>
+					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}
+					<li><a class="email" href="mailto:{{ site.author.email }}">Contact Me</a></li>
+					</ul>
 		</header>
 		<section id="river" role="main">{{ content }}</section>
 		<script src="{{ ASSET_PATH }}/js/prettify.js"></script>
