--- a/assets/themes/jb-svbtle/css/base.css
+++ b/assets/themes/jb-svbtle/css/base.css
@@ -186,6 +186,13 @@ header#begin time {
 	line-height: 23px
 }
 
+/* Navigation */
+
+a.active {
+	color: black !important;
+	border-color: black !important;
+}
+
 ul#user_nav{position:relative}
 ul#user_nav li a{position:relative;display:inline-block;font-size:15px;line-height:14px;border:4px solid #f8f8f8;border-radius:20px;-moz-border-radius:20px;-webkit-border-radius:20px;z-index:5;padding:7px;padding-left:15px;padding-right:15px;color:#999;margin-left:-30px;font-weight:600;background-color:#fff}
 ul#user_nav li a:hover{color:#000;border-color:#000}
