--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -14,6 +14,8 @@
 		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/prettify.css">
 		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/base.css">
 		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/fixes.css">
+		<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+
 		<style type="text/css">
 			.logo, .logo a, ::selection, blockquote {
 				background-color: #{{ site.color }} !important;
