--- a/assets/themes/jb-svbtle/css/base.css
+++ b/assets/themes/jb-svbtle/css/base.css
@@ -67,7 +67,13 @@ section.form textarea.active:-moz-placeholder{color:#777}
 section.form input.active::-webkit-input-placeholder{color:#777;font-weight:500}
 section.form textarea.active::-webkit-input-placeholder{color:#777}
 section.form input.active:-ms-input-placeholder{color:#777}
-body{background-color:#fff;font-family:'proxima-nova','Helvetica',sans-serif;font-weight:400}
+
+body {
+	background-color: #fff;
+	font-family: 'PT Sans', 'Helvetica', sans-serif;
+	font-weight: 400
+}
+
 h1,h2,h3,h4,h5,h6{color:#3a3a3a;margin-top:25px;margin-bottom:20px;max-width:480px}
 h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{font-weight:inherit}
 h1{font-size:22px;font-weight:bold}
@@ -76,13 +82,38 @@ h3{font-size:19px;font-weight:600}
 h4{font-size:17px;font-weight:600;color:#000}
 h5{color:#555;font-size:17px}
 h6{font-size:16px;font-weight:600;color:#555}
-p{font-size:15px;line-height:23px;margin-top:20px;margin-bottom:20px;color:#4d4d4d;font-family:'proxima-nova',sans-serif;font-weight:400}
-p img{margin:0}
-em{font-style:italic}
-strong{font-weight:bold;color:#333}
-small{font-size:80%}
-a:link,a:visited,a:hover,a:active{text-decoration:none}
-blockquote{display:inline-block;padding-left:18px;padding-bottom:0;font-size:15px;line-height:25px;margin-left:0;margin-top:0;margin-bottom:0;border-left:10px solid #000}
+
+p {
+	font-size: 15px;
+	line-height: 23px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	color: #4d4d4d;
+}
+
+p img { margin: 0 }
+
+em { font-style: italic }
+
+strong { font-weight: bold; color: #333 }
+
+small{ font-size: 80% }
+
+a:link, a:visited, a:hover, a:active { text-decoration: none }
+
+/* Articles */
+
+blockquote {
+	display: inline-block;
+	padding-left: 18px;
+	padding-bottom: 0;
+	font-size: 15px;
+	line-height: 25px;
+	margin-left: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+	border-left: 10px solid #000
+}
 article blockquote code ol{margin-left:28px}
 article blockquote pre code{margin-left:0}
 article blockquote h1,article blockquote h2,article blockquote h3,article blockquote h4{margin-top:15px}
@@ -192,10 +223,27 @@ a.active {
 	color: black !important;
 	border-color: black !important;
 }
-
-ul#user_nav{position:relative}
-ul#user_nav li a{position:relative;display:inline-block;font-size:15px;line-height:14px;border:4px solid #f8f8f8;border-radius:20px;-moz-border-radius:20px;-webkit-border-radius:20px;z-index:5;padding:7px;padding-left:15px;padding-right:15px;color:#999;margin-left:-30px;font-weight:600;background-color:#fff}
-ul#user_nav li a:hover{color:#000;border-color:#000}
+ul#user_nav{ position: relative }
+ul#user_nav li a {
+	position: relative;
+	display: inline-block;
+	font-size: 15px;
+	line-height: 14px;
+	border: 4px solid #f8f8f8;
+	border-radius: 20px;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	z-index: 5;
+	padding: 7px;
+	padding-left: 15px;
+	padding-right: 15px;
+	color: #999;
+	margin-left: -30px;
+	font-weight: 600;
+	background-color: #fff;
+	letter-spacing: 1px;
+}
+ul#user_nav li a:hover { color: #000; border-color: #000 }
 
 a.contents{background:url(/cargo/icons/list_icon.png) center center no-repeat;background-size:100%;width:25px;height:25px;text-indent:-9999px;display:block;float:right;margin-right:50px;z-index:20;position:relative;opacity:.01;margin-top:-10px}a.contents:hover{opacity:1}
 a.contents.articles{background:url(/cargo/icons/articles_icon.png) center center no-repeat}article.post{display:block;position:relative;padding-left:50px;padding-top:40px;padding-bottom:40px;border-top:1px solid #e2e2e2;min-height:130px;overflow-x:hidden}
