--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -41,7 +41,7 @@
 			<h1><a href="{{ BASE_PATH }}/">{{ site.author.name }}</a></h1>
 			<ul id="user_nav">
 				<div class="menu">
-					<ul>{% assign pages_list = site.pages | sort:"weight" %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}
+					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}
 					<li><a class="email" href="mailto:{{ site.author.email }}">Contact Me</a></li>
 					</ul>
 		</header>
