--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -42,7 +42,8 @@
 			<ul id="user_nav">
 				<div class="menu">
 					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}
-					<li><a class="email" href="mailto:{{ site.author.email }}">Contact Me</a></li>
+					{% if site.author.twitter %}<li><a target="_blank" class="twitter" href="http://www.twitter.com/{{ site.author.twitter }}">@{{ site.author.twitter }}</a></li>{% endif %}
+					{% if site.author.email %}<li><a target="_blank" class="email" href="mailto:{{ site.author.email }}">Contact Me</a></li>{% endif %}
 					</ul>
 		</header>
 		<section id="river" role="main">{{ content }}</section>
