--- a/assets/themes/jb-svbtle/css/base.css
+++ b/assets/themes/jb-svbtle/css/base.css
@@ -134,7 +134,13 @@ hr{border:solid #f4f3f3;border-width:5px 0 0;clear:both;margin:0;margin-left:90p
 a,a:visited{color:#333;text-decoration:none;outline:0}
 a:hover,a:focus{color:#000}
 p a,p a:visited{line-height:inherit}
-article img,article iframe,article object{display:block;margin:0;padding:0;max-width:657px;float:none}
+article img, article iframe, article object {
+	display: block;
+	margin: 0 auto;
+	padding: 0;
+	max-width: 657px;
+	float: none
+}
 article iframe,article object{min-height:250px;min-width:0}
 ul,ol{margin-bottom:20px;padding:0;margin:0;margin-left:20px}
 ul{display:block;list-style-type:none}
@@ -233,7 +239,7 @@ a.active {
 	border-color: black !important;
 }
 ul#user_nav{ position: relative }
-ul#user_nav li a {
+ul#user_nav li a, .nav_button {
 	position: relative;
 	display: inline-block;
 	font-size: 15px;
@@ -252,7 +258,7 @@ ul#user_nav li a {
 	background-color: #fff;
 	letter-spacing: 1px;
 }
-ul#user_nav li a:hover { color: #000; border-color: #000 }
+ul#user_nav li a:hover, .nav_button:hover { color: #000; border-color: #000 }
 
 a.contents{background:url(/cargo/icons/list_icon.png) center center no-repeat;background-size:100%;width:25px;height:25px;text-indent:-9999px;display:block;float:right;margin-right:50px;z-index:20;position:relative;opacity:.01;margin-top:-10px}a.contents:hover{opacity:1}
 a.contents.articles{background:url(/cargo/icons/articles_icon.png) center center no-repeat}article.post{display:block;position:relative;padding-left:50px;padding-top:40px;padding-bottom:40px;border-top:1px solid #e2e2e2;min-height:130px;overflow-x:hidden}
@@ -281,15 +287,64 @@ h2.page_title{margin-left:40px;color:#000;font-size:40px;font-weight:900;margin-
 .bleed,span.bleed,div.bleed,p.bleed,img.bleed{margin-left:-50px;display:block}#svbtle_linkback{position:fixed;left:20px;bottom:20px;font-size:17px;letter-spacing:0;text-transform:uppercase;font-family:"freight-sans-pro",sans-serif;font-weight:900;line-height:19px;background-color:#fff;padding:10px;height:30px;z-index:0;border-radius:5px;color:#000}
 span.logo_square{position:relative;background-color:#000;display:inline-block;border-radius:50%;width:32px;height:32px;margin-right:3px}
 span.logo_circle{position:relative;border:2px solid #fff;border-radius:50%;display:block;width:20px;height:20px;margin:0 auto;margin-top:4px;text-indent:-9999px}
-nav.pagination{padding:40px;border-top:1px solid #e2e2e2;padding-bottom:60px}
-nav.pagination span.next a,nav.pagination span.prev a{padding:10px;padding-left:20px;padding-right:20px;border-radius:30px;-moz-border-radius:30px;-webkit-border-radius:30px;font-weight:700;text-transform:uppercase;border:3px solid}
-nav.pagination span{display:none}
-nav.pagination span.next{display:block;float:right}
-nav.pagination span.prev{display:block;float:left}
-nav.pagination span.next a:hover,nav.pagination span.prev a:hover{color:#000;border-color:#000}
-section#fin{clear:both;padding-top:0;margin-bottom:0}section#fin a{margin-left:0;clear:both;display:inline-block;margin-top:20px}
-p.legal{margin-bottom:0;margin-top:0;border-top:1px solid #e2e2e2;margin-left:0;padding-bottom:30px;font-weight:400;padding-left:20px}
-p.legal a{font-size:14px;color:#ccc;-webkit-font-smoothing:antialiased}
+
+/* Footer */
+
+nav.pagination { 
+	padding: 40px;
+	border-top: 1px solid #e2e2e2;
+	padding-bottom: 60px
+}
+/* nav.pagination span.next a,nav.pagination span.prev a {
+	padding: 10px;
+	lpadding-left: 20px;
+	padding-right: 20px;
+	border-radius: 30px;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	font-weight: 700;
+	text-transform: uppercase;
+	border: 3px solid
+} */
+nav.pagination span { display: none }
+nav.pagination span.next {
+	display: block;
+	float: right
+}
+nav.pagination span.prev {
+	display: block;
+	float: left
+}
+/*nav.pagination span.next a:hover,nav.pagination span.prev a:hover {
+	color: #000;
+	border-color: #000
+}*/
+
+section#fin {
+	clear: both;
+	padding-top: 0;
+	margin-bottom: 0
+}
+section#fin a {
+	margin-left: 0;
+	clear: both;
+	display: inline-block;
+	margin-top: 20px
+}
+p.legal	{
+	margin-bottom: 0;
+	margin-top: 0;
+	border-top: 1px solid #e2e2e2;
+	margin-left: 0;
+	padding-bottom: 30px;
+	font-weight: 400;
+	padding-left: 20px
+}
+p.legal a {
+	font-size: 14px;
+	color: #ccc;
+	-webkit-font-smoothing: antialiased
+}
 
 /* Logo */
 
