--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -33,9 +33,9 @@
 	<body class="home blog">
 		<header id="sidebar">
 			<figure class="logo medium">
-				<a href="{{ BASE_PATH }}/">{{ site.title }}</a>
+				<a href="{{ BASE_PATH }}">{{ site.title }}</a>
 			</figure>
-			<h1><a href="{{ BASE_PATH }}/">{{ site.author.name }}</a></h1>
+			<h1><a href="{{ BASE_PATH }}">{{ site.author.name }}</a></h1>
 			<ul id="user_nav">
 				<div class="menu">
 					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}
