--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -5,15 +5,16 @@
 <!--[if IE 9 ]><html lang="en-US" class="no-js ie ie9 lte9"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en-US" class="no-js"><!--<![endif]-->
 	<head>
-		<meta charset="UTF-8"/>
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5, minimum-scale=0.5">
-		<meta http-equiv="X-UA-Compatible" content="IE=8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=8" />
 		<link rel="icon" type="image/png" href="{{ ASSET_PATH }}/images/icon.png" />
 		<title>{{ page.title }}</title>
-		<link rel="profile" href="http://gmpg.org/xfn/11"/>
-		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/prettify.css">
-		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/base.css">
-		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/fixes.css">
+		<link rel="profile" href="http://gmpg.org/xfn/11" />
+		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/prettify.css" />
+		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/base.css" />
+		<link rel="stylesheet" href="{{ ASSET_PATH }}/css/fixes.css" />
+                <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.min.css" />
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 
 		<style type="text/css">
@@ -41,6 +42,14 @@
 					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}
 					{% if site.author.email %}<li><a target="_blank" class="email" href="mailto:{{ site.author.email }}">Contact Me</a></li>{% endif %}
 					</ul>
+                                </div>
+                        </ul>
+                        <div id="social_icons">
+                          <i><a class="fa fa-twitter" href="http://www.twitter.com/{{ site.author.twitter }}"></a></i>
+                          <i><a class="fa fa-github" href="http://www.github.com/{{ site.author.github }}"></a></i>
+                          <i><a class="fa fa-linkedin" href="http://www.linkedin.com/in/{{ site.author.linkedin }}"></a></i>
+                          <i><a class="fa fa-rss" href="{{ BASE_PATH }}/pages/rss.xml"></a></i>
+                        </div>
 		</header>
 		<section id="river" role="main">{{ content }}</section>
 		<script src="{{ ASSET_PATH }}/js/prettify.js"></script>
