--- a/assets/themes/jb-svbtle/css/base.css
+++ b/assets/themes/jb-svbtle/css/base.css
@@ -17,7 +17,7 @@ dfn{font-style:italic}
 hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
 ins{background:#ff9;color:#000;text-decoration:none}
 mark{background:#ff0;color:#000;font-style:italic;font-weight:bold}
-pre,code,kbd,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}
+pre,code,kbd,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:15px;}
 pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}
 q{quotes:none}
 q:before,q:after{content:"";content:none}
@@ -302,8 +302,7 @@ ul#user_nav li a:hover, .nav_button:hover { color: #000; border-color: #000 }
 
 a.contents{background:url(/cargo/icons/list_icon.png) center center no-repeat;background-size:100%;width:25px;height:25px;text-indent:-9999px;display:block;float:right;margin-right:50px;z-index:20;position:relative;opacity:.01;margin-top:-10px}a.contents:hover{opacity:1}
 a.contents.articles{background:url(/cargo/icons/articles_icon.png) center center no-repeat}article.post{display:block;position:relative;padding-left:50px;padding-top:40px;padding-bottom:40px;border-top:1px solid #e2e2e2;min-height:130px;overflow-x:hidden}
-article h1,article h2,article h3,article h4,article h5,article h6,article p,article blockquote{max-width:550px;padding-right:100px}
-/*article.post>p:nth-child(2){font-size:18px;line-height:26px;color:#373737}*/
+article h1,article h2,article h3,article h4,article h5,article h6,article p,article blockquote, pre {max-width:550px;padding-right:100px}
 article blockquote p,article blockquote blockquote,article blockquote blockquote p,article blockquote blockquote blockquote,article blockquote blockquote blockquote p{padding-right:0;margin-right:0}
 article.post h2 a{color:#000;text-decoration:none;border-bottom:1px solid #CCC;font-family:"freight-sans-pro",sans-serif;font-weight:700;font-size:20px;line-height:28px;-webkit-font-smoothing:antialiased}
 article h2 a.no-link{border:none;font-size:28px}
@@ -460,6 +459,9 @@ figure.logo.medium a {
 }
 
 @media only all and (min-width:1100px) {
+	pre {
+		font-size: 17px;
+	}
 	header#sidebar figure.logo {
 		width: 200px;
 		height: 200px
@@ -474,11 +476,7 @@ figure.logo.medium a {
 		font-size: 17px;
 		line-height:27px
 	}
-	/*article.post>p:nth-child(2) {
-		font-size: 20px;
-		line-height: 30px
-	}*/
-	article h1, article h2, article h3, article h4, article h5, article h6, article p, article blockquote, article iframe { max-width: 600px }
+	article h1, article h2, article h3, article h4, article h5, article h6, article p, article blockquote, article iframe, pre { max-width: 600px }
 	article p img.bleed {
 		min-width: 650px;
 		max-width: 650px
@@ -563,10 +561,6 @@ figure.logo.medium a {
 
 @media all and (max-width:620px) {
 	section#river article.post h2 a { font-size: 24px }
-	/*article.post>p:nth-child(2) {
-		font-size: 15px;
-		line-height: 23px
-	}*/
 	header#sidebar figure.logo {
 		width: 114px;
 		height: 114px
