--- a/_includes/themes/jb-svbtle/default.html
+++ b/_includes/themes/jb-svbtle/default.html
@@ -18,10 +18,9 @@
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 
 		<style type="text/css">
-			.logo, .logo a, ::selection { background-color: #{{ site.color }} !important }
+			::selection { background-color: #{{ site.color }} !important }
 			blockquote { border-left-color: #{{ site.color }} }
 			::-moz-selection {background-color: #{{ site.color }} !important }
-			.logo a { background-image: url( '{{ ASSET_PATH }}/images/icons/{{ site.icon }}.png' ) }
 		</style>
 
 		<!--[if lt IE 9]>
@@ -34,9 +33,9 @@
 	<body class="home blog">
 		<header id="sidebar">
 			<figure class="logo medium">
-				<a href="{{ BASE_PATH }}">{{ site.title }}</a>
+                <a href="/"><img src="{{BASE_PATH}}/assets/themes/jb-svbtle/images/developer-koala.jpg" caption="{{ site.title }}" /></a>
 			</figure>
-			<h1><a href="{{ BASE_PATH }}">{{ site.author.name }}</a></h1>
+			<h1><a href="/">{{ site.author.name }}</a></h1>
 			<ul id="user_nav">
 				<div class="menu">
 					<ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include themes/jb-svbtle/pages_list %}
