--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -655,10 +655,12 @@ section#river article p img, section#river article p iframe, section#river artic
 /* Some selection styling, colour is defined in default.html */
 
 ::selection {
-	text-shadow: none;
-	color: white;
+    text-shadow: none;
+    background-color: #356AA0 !important;
+}
+blockquote {
+    border-left-color: #356AA0;
 }
 ::-moz-selection {
-	text-shadow: none;
-	color: white;
+    background-color: #356AA0 !important;
 }
