--- a/_includes/default.html
+++ b/_includes/default.html
@@ -35,11 +35,6 @@
         <section id="river" role="main">{{ content }}</section>
         <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
         <script src="/assets/js/prettify.js"></script>
-        <script type="text/javascript">
-            jQuery( document ).ready( function( $ ) {
-                $( 'pre' ).addClass( 'prettyprint' );
-                prettyPrint();
-            } );
-        </script>
+        <script type='text/javascript' src='/assets/js/base.js'></script>
     </body>
 </html>
