--- a/_includes/default.html
+++ b/_includes/default.html
@@ -6,9 +6,7 @@
         <link rel="icon" type="image/png" href="/assets/images/icon.png" />
         <title>{{ page.title }}</title>
         <link rel="profile" href="http://gmpg.org/xfn/11" />
-        <link rel="stylesheet" href="/assets/css/prettify.css" />
-        <link rel="stylesheet" href="/assets/css/base.css" />
-        <link rel="stylesheet" href="/assets/css/fixes.css" />
+        <link rel="stylesheet" href="/assets/css/style.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
         <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     </head>
@@ -18,19 +16,21 @@
                 <a href="/"><img src="/assets/images/developer-koala.jpg" caption="{{ site.title }}" /></a>
             </figure>
             <h1><a href="/">{{ site.author.name }}</a></h1>
+            <a href='#' id='mobile_menu'><i class='fa fa-bars'></i></a>
             <ul id="user_nav">
                 <div class="menu">
                     <ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}
                         {% if site.author.email %}<li><a target="_blank" class="email" href="mailto:{{ site.author.email }}">Contact Me</a></li>{% endif %}
                     </ul>
                 </div>
+                <div id="social_icons">
+                    <i><a class="fa fa-twitter" href="http://www.twitter.com/{{ site.author.twitter }}"></a></i>
+                    <i><a class="fa fa-github" href="http://www.github.com/{{ site.author.github }}"></a></i>
+                    <i><a class="fa fa-linkedin" href="http://www.linkedin.com/in/{{ site.author.linkedin }}"></a></i>
+                    <i><a class="fa fa-rss" href="/pages/rss.xml"></a></i>
+                </div>
             </ul>
-            <div id="social_icons">
-                <i><a class="fa fa-twitter" href="http://www.twitter.com/{{ site.author.twitter }}"></a></i>
-                <i><a class="fa fa-github" href="http://www.github.com/{{ site.author.github }}"></a></i>
-                <i><a class="fa fa-linkedin" href="http://www.linkedin.com/in/{{ site.author.linkedin }}"></a></i>
-                <i><a class="fa fa-rss" href="/pages/rss.xml"></a></i>
-            </div>
+            <div class='clearfix'></div>
         </header>
         <section id="river" role="main">{{ content }}</section>
         <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
