--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -395,6 +395,18 @@ header#sidebar {
         width: 170px;
         height: 170px;
     }
+    &.menu_active {
+        @media all and ( max-width: $responsive_start ) {
+            #user_nav {
+                max-height: 50vh;
+            }
+            #mobile_menu i {
+                -webkit-transform: rotate( 90deg );
+                -ms-transform: rotate( 90deg );
+                transform: rotate( 90deg );
+            }
+        }
+    }
     #mobile_menu {
         display: none;
         float: right;
@@ -404,7 +416,10 @@ header#sidebar {
         top: -2px;
         position: relative;
         color: $lt_grey !important;
-        @media( max-width: $responsive_start ) {
+        i {
+            transition: transform, -webkit-transform 0.1s linear;
+        }
+        @media all and ( max-width: $responsive_start ) {
             display: block;
         }
     }
@@ -514,9 +529,6 @@ header#sidebar {
             width: 100%;
             padding: 0;
             max-height: 0px;
-            &.active {
-                max-height: 50vh;
-            }
         }
     }
     #social_icons {
