--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -417,7 +417,9 @@ header#sidebar {
         position: relative;
         color: $lt_grey !important;
         i {
-            transition: transform, -webkit-transform 0.1s linear;
+            -webkit-transition: -webkit-transform 0.1s linear;
+            -ms-transition: -ms-transform 0.1s linear;
+            transition: transform 0.1s linear;
         }
         @media all and ( max-width: $responsive_start ) {
             display: block;
