optimise css and fix jekyll compile warnings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,5 @@
-@import 'fixes.css';
-@import 'prettify.css';
+@import 'fixes';
+@import 'prettify';
 
 $responsive_start: 750px;
 $lt_grey: #585858;
